# arxiv_degree

./: Cargo.toml  README.md
src/: author.rs  main.rs  paper.rs  scrape.rs
src/scrape/: mod.rs
