[package]
name = "arxiv_degree"
version = "0.1.1"
authors = ["James Petley <jwpetley@gmail.com>"]
edition = "2021"
description = "A degree of seperation search through astro-ph"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jwpetley/arxiv_degree"
readme = "README.md"

[dependencies]
reqwest = {version = "0.12.5", features = ["blocking"]}
scraper = "0.19.1"
